# paley-numerics

./: .gitignore  CMakeLists.txt  README.md  block_diagonal.cpp  headers.h  helpers.cpp  lovasz.cpp  main.cpp  sdo.cpp
env/: .env.local
examples/: sdo.cpp
includes/: headers.h
src/: helpers.cpp  main.cpp
